# ebd-ia

./: .env.example  .gitignore  README.md  compose.yaml  migracao-gd.patch  scaffold.py  testar-templates.py
bots/: README.md
channels/telegram_bot/: main.py
core/: 2bb97a5b-36bb-4fe6-b1bb-e2b65b55c131  pyproject.toml
core/app/: agent.py  artifacts.py  cli.py  config.py  grounding.py  system_prompt.py
core/app/adapters/: telegram.py
core/app/data/: templates.json
core/app/storage/: chat_history.py
core/app/tools/: artifact_tools.py  chart_builder.py  excel_builder.py  gate_template.py  knowledge_append.py  oracle_bridge.py  pdf_builder.py  pptx_builder.py  proposals.py  routemap_builder.py  template_catalog.py
docs/: CLAUDE.md  README.md  knowledge.md  query_templates.md  query_templates.md.bak-20260520  sql-corrections.md  winthor_discovery.md
docs/adr/: 0001-claude-agent-sdk.md  0002-rotina-131-pclib.md  0003-sonnet-opus-por-perfil.md  0004-ssh-server-vpn-only.md  0005-worker-separado-do-gateway.md  README.md
docs/api/: gateway.openapi.yaml
docs/bi-fontes/: README.md  fato_estoque_oficial.sql
docs/runbooks/: adicionar-vendedor.md  backup-restore.md  deploy.md  recuperacao-de-incidente.md
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: AccessAdmin.tsx  App.css  App.tsx  ArtifactCard.tsx  ChartCard.tsx  MapCard.tsx  index.css  main.tsx
frontend/src/auth/: authConfig.ts
gateway/: .env.example  README.md
gateway/app/: acl_store.py  db.py  main.py  mercado.py  models_catalog.py
gateway/app/auth/: entra.py
gateway/app/routes/: admin_acl.py  artifacts.py  chat.py  conversations.py  health.py  me.py  mercado.py
infra/: README.md
infra/postgres/migrations/: 003_acl_users.sql  004_acl_filiais.sql
mcps/: README.md
mcps/oracle/: Dockerfile  pyproject.toml
mcps/oracle/app/: acl.py  config.py  models.py  pool.py  scope_guard.py  server.py
mcps/oracle/app/scripts/: explore_winthor.py  health_check.py  mcp_smoke_test.py
mcps/oracle/tests/: test_scope_guard.py
observability/: compose.observability.yml  mine_cols.py  mine_family.py  mine_visitas.py  nginx-obs.conf  obs_selfreport.py
observability/grafana/dashboards/: ebdia-erros.json  ebdia-llm.json  ebdia-overview.json
observability/grafana/provisioning/dashboards/: provider.yml
observability/grafana/provisioning/datasources/: ds.yml
observability/loki/: config.yml
observability/otel/: config.yml
observability/prometheus/: prometheus.yml
observability/promtail/: config.yml
observability/tempo/: config.yml
scripts/: README.md  autoheal_mcp.sh
worker/: README.md
worker/app/memory/shared/: README.md
worker/app/memory/users/: README.md
worker/app/prompts/: system_diretor.md  system_manager.md  system_rca.md  system_vendedor.md
worker/app/subagents/: README.md
