[project]
name = "ebd-ia-core"
version = "0.1.0"
description = "Cerebro unico EBD.ia - Claude Agent SDK + tools + memory"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [
    { name = "Thiago Martins Parreira", email = "thiago.parreira@ebdgrupo.com.br" }
]

dependencies = [
    "anthropic>=0.40.0,<1.0.0",
    "httpx>=0.27.0,<1.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "structlog>=24.4.0,<25.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "mcp>=1.2.0,<2.0.0",
    "rich>=13.0.0,<14.0.0",
]

[project.optional-dependencies]
telegram = ["python-telegram-bot>=21.0,<22.0"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24", "ruff>=0.5"]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
